parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_macro8.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: Int(
            Int(
                1,
            ),
        ),
        leading_space: false,
        hideset: {
            "ONE",
        },
        loc: 4:1,
    },
]
