parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_macro9.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: Ident(
            "f",
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Int(
            Int(
                1,
            ),
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Symbol(
            Comma,
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Int(
            Int(
                2,
            ),
        ),
        leading_space: true,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Symbol(
            Comma,
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Int(
            Int(
                3,
            ),
        ),
        leading_space: true,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {
            "F",
        },
        loc: None:3:1,
    },
    Token {
        kind: Ident(
            "g",
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
    Token {
        kind: Int(
            Int(
                1,
            ),
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
    Token {
        kind: Symbol(
            Comma,
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
    Token {
        kind: Int(
            Int(
                2,
            ),
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
    Token {
        kind: Symbol(
            Comma,
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
    Token {
        kind: Int(
            Int(
                3,
            ),
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {
            "G",
        },
        loc: None:5:1,
    },
]
