parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_tokens.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens(&mut l)

---
[
    Token {
        kind: Ident(
            "int",
        ),
        leading_space: false,
        hideset: {},
        loc: None:1:1,
    },
    Token {
        kind: Ident(
            "main",
        ),
        leading_space: true,
        hideset: {},
        loc: None:1:5,
    },
    Token {
        kind: NewLine,
        leading_space: false,
        hideset: {},
        loc: None:2:1,
    },
    Token {
        kind: Ident(
            "long",
        ),
        leading_space: false,
        hideset: {},
        loc: None:2:1,
    },
    Token {
        kind: Ident(
            "short",
        ),
        leading_space: true,
        hideset: {},
        loc: None:2:6,
    },
]
