parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_tokens2.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens(&mut l)

---
[
    Token {
        kind: Ident(
            "int",
        ),
        leading_space: false,
        hideset: {},
        loc: None:1:1,
    },
    Token {
        kind: Ident(
            "main",
        ),
        leading_space: true,
        hideset: {},
        loc: None:1:5,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {},
        loc: None:1:9,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {},
        loc: None:1:10,
    },
]
