parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_tokens3.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens(&mut l)

---
[
    Token {
        kind: Ident(
            "int",
        ),
        leading_space: false,
        hideset: {},
        loc: None:1:1,
    },
    Token {
        kind: Ident(
            "main",
        ),
        leading_space: true,
        hideset: {},
        loc: None:1:5,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {},
        loc: None:1:9,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {},
        loc: None:1:10,
    },
    Token {
        kind: Symbol(
            OpeningBrace,
        ),
        leading_space: true,
        hideset: {},
        loc: None:1:12,
    },
    Token {
        kind: NewLine,
        leading_space: false,
        hideset: {},
        loc: None:2:1,
    },
    Token {
        kind: Ident(
            "return",
        ),
        leading_space: true,
        hideset: {},
        loc: None:2:2,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: None:2:8,
    },
    Token {
        kind: NewLine,
        leading_space: false,
        hideset: {},
        loc: None:3:1,
    },
    Token {
        kind: Symbol(
            ClosingBrace,
        ),
        leading_space: false,
        hideset: {},
        loc: None:3:1,
    },
]
